# gcloud_pubsub

./: .dockerignore  .gitignore  Dockerfile  docker-compose-ci.yml  docker-compose.yml  main.py  pyproject.toml  readme.md
.github/workflows/: build & test.yaml
app/: publisher.py  subscriber.py
test/: test_subscriber.py
